# carbon-nanotube-cpp

./: .gitignore  CMakeLists.txt  README.md  md_fec.cpp  prog_full.cpp  verify.ipynb  verify.py
input/: particles_initial.json
